tests/ui/g-par-role-conflict.stderr
error[E0080]: evaluation panicked: parallel lanes must use disjoint (role, lane) pairs
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Par<hibana::g::Send<0, 1, hibana::g::Msg<3, ()>>, hibana::g::Send<0, 2, hibana::g::Msg<4, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Par<hibana::g::Send<0, 1, Msg<3, ()>>, hibana::g::Send<0, 2, Msg<4, ()>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("parallel lanes must use disjoint (role, lane) pairs")
  |             ------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Par<hibana::g::Send<0, 1, Msg<3, ()>>, hibana::g::Send<0, 2, Msg<4, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
